--- a/WebContent/templates/modeloGeral.xhtml
+++ b/WebContent/templates/modeloGeral.xhtml
@@ -19,8 +19,9 @@
 	
 	<p:layout fullPage="true">
 		<!-- topo -->
-		<p:layoutUnit size="120" position="north" resizable="false"
+		<p:layoutUnit size="85" position="north" resizable="false"
 			collapsible="false" closable="false">
+			<p:graphicImage value="/images/logo.png"></p:graphicImage>
 		</p:layoutUnit>
 		
 		<!-- rodapé -->
@@ -37,12 +38,19 @@
 						<p:menuitem value="Principal" outcome="/pages/principal.xhtml" />
 						<p:menuitem value="Sair" />
 					</p:submenu>
-					<p:submenu label="Cadastros">
-						<p:menuitem value="Usuários" outcome="/pages/usuario/usuarioPesquisa.xhtml" />
+					<p:submenu label="Cadastros">						
 						<p:menuitem value="Colaborador" outcome="/pages/pessoaFisica/pessoaFisicaPesquisa.xhtml"/>
+						<p:menuitem value="Empresas" outcome="/pages/pessoaJuridica/pessoaJuridicaPesquisa.xhtml"/>
+						<p:menuitem value="Usuários" outcome="/pages/usuario/usuarioPesquisa.xhtml" />
+						<p:menuitem value="Produto/Serviço" outcome="/pages/item/itemPesquisa.xhtml" />
 					</p:submenu>
-					<p:submenu label="Relatórios">
+					<p:submenu label="Pagamentos">
+						<p:menuitem value="Novo Pagamento" outcome="/pages/pagamento/pagamentoCadastro.xhtml" />
 					</p:submenu>
+					<p:submenu label="Recebimentos">
+						<p:menuitem value="Novo Recebimento" outcome="/pages/recebimento/recebimentoCadastro.xhtml" />
+					</p:submenu>
+					
 				</p:panelMenu>
 			</h:form>
 		</p:layoutUnit>
